base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: oukchiren/myapp:cbeee170044952b6ffbdbcfee85397018be153ce
        ports:
        - containerPort: 3000
